Fix assembly name

--- a/Samples~/Playtesting/Agava.YandexMetrica.Samples.Playtesting.asmdef
+++ b/Samples~/Playtesting/Agava.YandexMetrica.Samples.Playtesting.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Agava.YandexGames.Samples.Playtesting",
+    "name": "Agava.YandexMetrica.Samples.Playtesting",
     "rootNamespace": "",
     "references": [
         "GUID:5486940dd4146634f9d474c1c474551e"
