--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.agava.yandexmetrica",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "displayName": "Yandex Metrica",
   "type": "library",
   "unity": "2020.3",
@@ -17,5 +17,6 @@
       "description": "Template required for Yandex Metrica.",
       "path": "Samples~/WebGLTemplates"
     }
-  ]
+  ],
+  "author": "github.com/forcepusher"
 }
